# data-engineering-zoomcamp

./: notebook.ipynb  pyproject.toml
pipeline/: Dockerfile
